--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,14 @@ services:
        - postgres-data:/var/lib/postgresql/data
      ports:
        - "5432:5432"
+  
+  #front:
+    #image: ${DOCKER_REGISTRY-}diplomworkfront
+    #build:
+      #context: ../DiplomWorkFront
+      #dockerfile: Dockerfile
+    #ports:
+      #- "4173:4173"
 
 volumes:
   postgres-data:
